--- a/src/app/common/layout/topbar/navigation.component.html
+++ b/src/app/common/layout/topbar/navigation.component.html
@@ -5,13 +5,10 @@
       routerLink="/newsfeed"
       routerLinkActive="m-topbar--navigation--item-active"
       title="Newsfeed"
-      i18n-title="@@M_TOPBAR_NEWSFEED"
     >
       <i class="material-icons">home</i>
 
-      <span class="m-topbar--navigation--text" i18n="@@M_TOPBAR_NEWSFEED"
-        >Newsfeed</span
-      >
+      <span class="m-topbar--navigation--text">Newsfeed</span>
     </a>
   </div>
 
@@ -21,13 +18,10 @@
       routerLink="/channels"
       routerLinkActive="m-topbar--navigation--item-active"
       title="Channels"
-      i18n-title="@@M_TOPBAR_CHANNELS"
     >
       <i class="material-icons">people</i>
 
-      <span class="m-topbar--navigation--text" i18n="@@M_TOPBAR_CHANNELS"
-        >Channels</span
-      >
+      <span class="m-topbar--navigation--text">Channels</span>
     </a>
   </div>
 
@@ -37,13 +31,10 @@
       routerLink="/media/videos"
       routerLinkActive="m-topbar--navigation--item-active"
       title="Videos"
-      i18n-title="@@M_TOPBAR_VIDEOS"
     >
       <i class="material-icons">videocam</i>
 
-      <span class="m-topbar--navigation--text" i18n="@@M_TOPBAR_VIDEOS"
-        >Videos</span
-      >
+      <span class="m-topbar--navigation--text">Videos</span>
     </a>
   </div>
 
@@ -53,13 +44,10 @@
       routerLink="/media/images"
       routerLinkActive="m-topbar--navigation--item-active"
       title="Images"
-      i18n-title="@@M_TOPBAR_IMAGES"
     >
       <i class="material-icons">photo</i>
 
-      <span class="m-topbar--navigation--text" i18n="@@M_TOPBAR_IMAGES"
-        >Images</span
-      >
+      <span class="m-topbar--navigation--text">Images</span>
     </a>
   </div>
 
@@ -69,13 +57,10 @@
       routerLink="/blog"
       routerLinkActive="m-topbar--navigation--item-active"
       title="Blogs"
-      i18n-title="@@M_TOPBAR_BLOGS"
     >
       <i class="material-icons">subject</i>
 
-      <span class="m-topbar--navigation--text" i18n="@@M_TOPBAR_BLOGS"
-        >Blogs</span
-      >
+      <span class="m-topbar--navigation--text">Blogs</span>
     </a>
   </div>
 
@@ -85,11 +70,10 @@
       routerLink="/groups"
       routerLinkActive="m-topbar--navigation--item-active"
       title="Groups"
-      i18n-title="@@M_TOPBAR_GROUPS"
     >
       <i class="material-icons">group_work</i>
 
-      <span class="m-topbar--navigation--text" i18n="@@M_TOPBAR_GROUPS">
+      <span class="m-topbar--navigation--text">
         Groups
       </span>
     </a>
