--- a/src/app/common/layout/topbar/topbar.component.html
+++ b/src/app/common/layout/topbar/topbar.component.html
@@ -79,7 +79,7 @@
         <ng-template #helpAndSupport>
           <a [routerLink]="['/groups/profile/', '100000000000000681']">
             <i class="material-icons">help_outline</i>
-            <span i18n="COMMON__HELP_AND_SUPPORT">Help & Support</span>
+            <span i18n="@@COMMON__HELP_AND_SUPPORT">Help & Support</span>
           </a>
         </ng-template>
       </li>
