--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -22,7 +22,7 @@
           class="m-v3TopbarNav__item m-v3TopbarNav__item--logo"
           routerLink="/"
           title="Home"
-          i18n-title
+          i18n-title="@@COMMON__HOME"
           (touchstart)="touchStart()"
           (mouseenter)="mouseEnter()"
           (mouseleave)="mouseLeave()"
@@ -63,7 +63,7 @@
               class="m-v3TopbarLoginWrapper__login"
               routerLink="/login"
               title="Login"
-              i18n-title
+              i18n-title="@@COMMON__LOGIN"
             >
               Login
             </a>
@@ -72,7 +72,7 @@
               class="m-v3TopbarLoginWrapper__joinMindsNow"
               routerLink="/register"
               title="Join Minds Now"
-              i18n-title
+              i18n-title="@@COMMON__JOIN_MINDS_NOW"
             >
               Join Minds Now
             </a>
