--- a/src/app/modules/admin/boosts/modal/rejection-reason-modal.component.html
+++ b/src/app/modules/admin/boosts/modal/rejection-reason-modal.component.html
@@ -1,9 +1,6 @@
 <m-modal [open]="open" (closed)="close()">
   <div [hidden]="errorlevel !== null" class="m-modal-confirm-body">
-    <h5
-      class="m-modal-reasons--title"
-      i18n="@@MINDS__ADMIN__BOOSTS_MODAL__REJECTION_TITLE"
-    >
+    <h5 class="m-modal-reasons--title">
       Specify a reason for the rejection
     </h5>
 
