--- a/src/app/modules/admin/featured/featured.html
+++ b/src/app/modules/admin/featured/featured.html
@@ -1,9 +1,7 @@
 <div class="mdl-grid m-admin-reports" style="max-width:600px">
   <div class="mdl-cell mdl-cell--12-col" style="text-align: center;">
     <select *ngIf="categories" (change)="setCategory($event.target.value)">
-      <option value="" i18n="@@M__COMMON__CATEGORY_PLACEHOLDER"
-        >-- Category --</option
-      >
+      <option value="">-- Category --</option>
       <option *ngFor="let category of categories" [value]="category.key"
         >{{ category.value }}</option
       >
