--- a/src/app/modules/admin/payouts/payouts.component.html
+++ b/src/app/modules/admin/payouts/payouts.component.html
@@ -1,6 +1,6 @@
 <div class="mdl-grid m-admin-payouts" style="max-width:600px">
   <div class="m-note">
-    <ng-container i18n="@@M__COMMON__BAN_MONETIZATION_NOTICE"
+    <ng-container
       >Users can be banned for monetizing on the dropdown in their
       profile.</ng-container
     >
@@ -34,7 +34,6 @@
           class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
           (click)="review(i)"
           [disabled]="inProgress"
-          i18n="verb|@@M__COMMON__REVIEW"
         >
           Review
         </button>
@@ -44,7 +43,6 @@
           class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored m-admin-button--green"
           (click)="pay(i)"
           [disabled]="inProgress"
-          i18n="@@MINDS__ADMIN__PAYOUTS__PAY_ACTION"
         >
           Pay
         </button>
@@ -53,7 +51,6 @@
           class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored"
           (click)="review(null)"
           [disabled]="inProgress"
-          i18n="@@M__ACTION__CANCEL"
         >
           Cancel
         </button>
