--- a/src/app/modules/auth/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/forgot-password/forgot-password.component.html
@@ -55,13 +55,13 @@
             <div class="m-forgot-password__header">
               <h3
                 class="ng-star-inserted"
-                i18n="COMMON__PASSWORD_RESET_EMAIL_SENT"
+                i18n="@@COMMON__PASSWORD_RESET_EMAIL_SENT"
               >
                 Password Reset Email Sent
               </h3>
               <span
                 class="m-forgot-password__secondaryText"
-                i18n="COMMON__PASSWORD_UNLOCK_CODE_SENT"
+                i18n="@@COMMON__PASSWORD_UNLOCK_CODE_SENT"
               >
                 We have sent an unlock code to your registered email address.
               </span>
