--- a/src/app/modules/blockchain/marketing/rewards.component.html
+++ b/src/app/modules/blockchain/marketing/rewards.component.html
@@ -3,7 +3,7 @@
 <m-marketing
   class="m-nodes__marketing"
   pageTitle="Minds Rewards"
-  i18n-pageTitle
+  i18n-pageTitle="@@COMMON__MINDS_REWARDS"
 >
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
