--- a/src/app/modules/blockchain/marketing/token.component.html
+++ b/src/app/modules/blockchain/marketing/token.component.html
@@ -1,6 +1,10 @@
 <div class="mf-jumpAnchor" #topAnchor></div>
 
-<m-marketing class="m-token__marketing" pageTitle="Tokens" i18n-pageTitle>
+<m-marketing
+  class="m-token__marketing"
+  pageTitle="Tokens"
+  i18n-pageTitle="@@COMMON__TOKENS"
+>
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
       <div class="m-grid__column-7 m-grid__column-12--mobile m-marketing__body">
