--- a/src/app/modules/blockchain/token-purchase/purchase.component.html
+++ b/src/app/modules/blockchain/token-purchase/purchase.component.html
@@ -27,7 +27,7 @@
       class="mf-button"
       [disabled]="!tokens"
       (click)="purchase(); $event.preventDefault()"
-      i18n
+      i18n="verb|@@COMMON__BUY"
     >
       Buy
     </button>
