--- a/src/app/modules/channels/channel.component.html
+++ b/src/app/modules/channels/channel.component.html
@@ -158,6 +158,6 @@
   <m-explicit-overlay
     [entity]="user"
     message="This channel contains content that is NSFW"
-    i18n-message
+    i18n-message="@@MINDS__CHANNELS__CHANNEL_IS_NSFW_MESSAGE"
   ></m-explicit-overlay>
 </ng-container>
