--- a/src/app/modules/channels/sidebar-v2/sidebar-v2.component.html
+++ b/src/app/modules/channels/sidebar-v2/sidebar-v2.component.html
@@ -16,7 +16,7 @@
 
 <m-channels--sorted-module
   title="Images"
-  i18n-title
+  i18n-title="@@COMMON__IMAGES"
   type="images"
   [channel]="user"
   [linksTo]="['/', user.username, 'images']"
@@ -26,7 +26,7 @@
 
 <m-channels--sorted-module
   title="Videos"
-  i18n-title
+  i18n-title="@@COMMON__VIDEOS"
   type="videos"
   [channel]="user"
   [linksTo]="['/', user.username, 'videos']"
