--- a/src/app/modules/channels/v2/content/content.component.html
+++ b/src/app/modules/channels/v2/content/content.component.html
@@ -79,7 +79,7 @@
       <button
         class="m-channelContent__confirmButton"
         (click)="content.forceNsfwContent$.next(true)"
-        i18n
+        i18n="@@CHANNEL_CONTENT__I_AM_OVER_18"
       >
         I am 18 or over
       </button>
