--- a/src/app/modules/channels/v2/list/list.component.html
+++ b/src/app/modules/channels/v2/list/list.component.html
@@ -24,7 +24,7 @@
         placeholder="Filter..."
         [(ngModel)]="query"
         (keyup)="search()"
-        i18n-placeholder
+        i18n-placeholder="@@COMMON__CHANNEL_LIST__FILTER_ELLIPSIS"
       />
     </div>
 
