--- a/src/app/modules/comments/thread/thread.component.html
+++ b/src/app/modules/comments/thread/thread.component.html
@@ -118,7 +118,7 @@
 </div>
 
 <span *ngIf="sockets.error$ | async" class="m-commentsThread__connectionLost">
-  <ng-container i18n="MINDS__COMMENTS__NO_LIVE_COMMENTS"
+  <ng-container i18n="@@MINDS__COMMENTS__NO_LIVE_COMMENTS"
     >Could not load live comments</ng-container
   >
   <br />
