--- a/src/app/modules/composer/components/preview/attachment-preview.component.html
+++ b/src/app/modules/composer/components/preview/attachment-preview.component.html
@@ -2,7 +2,7 @@
   <img
     class="m-composerPreview__image"
     alt="Uploaded image"
-    i18n-alt
+    i18n-alt="@@COMPOSER_POPUP__UPLOADED_IMAGE"
     [src]="safeResourceUrl"
     (load)="fitForImage(image)"
     #image
