--- a/src/app/modules/forms/login/login.html
+++ b/src/app/modules/forms/login/login.html
@@ -129,7 +129,7 @@
     class="m-login__joinTheConversation"
     [routerLink]="['/register']"
     *ngIf="showTitle"
-    i18n
+    i18n="@@LOGIN__JOIN_MINDS_NOW"
   >
     Join Minds Now
   </a>
