--- a/src/app/modules/forms/register/register.html
+++ b/src/app/modules/forms/register/register.html
@@ -118,7 +118,7 @@
       <label
         for="password2"
         *ngIf="showLabels"
-        i18n="MINDS_REGISTRATION__CONFIRM_YOUR_PASSWORD"
+        i18n="@@MINDS_REGISTRATION__CONFIRM_YOUR_PASSWORD"
       >
         Confirm your password
       </label>
