--- a/src/app/modules/groups/profile/profile.html
+++ b/src/app/modules/groups/profile/profile.html
@@ -16,7 +16,7 @@
 <m-explicit-overlay
   [entity]="group"
   message="This group contains content that is NSFW"
-  i18n-message
+  i18n-message="@@GROUPS__THIS_GROUP_CONTAINS_NSFW"
 ></m-explicit-overlay>
 
 <div
