--- a/src/app/modules/groups/profile/review/review.component.html
+++ b/src/app/modules/groups/profile/review/review.component.html
@@ -29,7 +29,7 @@
           <button
             class="mdl-button mdl-button--raised mdl-button--colored mdl-color--green-500"
             (click)="approve(entity, i)"
-            i18n
+            i18n="@@COMMON__APPROVE"
           >
             Approve
           </button>
@@ -37,7 +37,7 @@
           <button
             class="mdl-button mdl-button--raised mdl-button--colored mdl-color--red-500"
             (click)="reject(entity, i)"
-            i18n
+            i18n="@@COMMON__REJECT"
           >
             Reject
           </button>
