--- a/src/app/modules/media/youtube-migration/config/config.component.html
+++ b/src/app/modules/media/youtube-migration/config/config.component.html
@@ -12,7 +12,8 @@
                 for="autoImport"
                 class="m-form__customInputWrapper__checkbox"
               >
-                <ng-container i18n
+                <ng-container
+                  i18n="@@YOUTUBE_MIGRATION__CONFIG__TRANSFER_NEW_VIDEOS"
                   >Automatically transfer newly added YouTube videos across to
                   Minds</ng-container
                 >
