--- a/src/app/modules/media/youtube-migration/marketing/marketing.component.html
+++ b/src/app/modules/media/youtube-migration/marketing/marketing.component.html
@@ -1,7 +1,7 @@
 <m-marketing
   class="m-nodes__marketing"
   pageTitle="YouTube Migration"
-  i18n-pageTitle
+  i18n-pageTitle="@@YOUTUBE_MIGRATION__YOUTUBE_MIGRATION"
 >
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
