--- a/src/app/modules/newsfeed/feeds/sorted.component.html
+++ b/src/app/modules/newsfeed/feeds/sorted.component.html
@@ -52,7 +52,7 @@
             "
             class="m-feeds-sorted__fallbackLegend"
           >
-            <span i18n="NEWSFEED_SORTED__POSTS_OLDER_THAN"
+            <span i18n="@@NEWSFEED_SORTED__POSTS_OLDER_THAN"
               >Posts older than {{ period | uppercase }}</span
             >
           </div>
