--- a/src/app/modules/newsfeed/poster/poster.component.html
+++ b/src/app/modules/newsfeed/poster/poster.component.html
@@ -74,7 +74,7 @@
             class="m-mature-button m-posterActionBar__MatureButton"
             (click)="attachment.toggleMature()"
             title="Rating"
-            i18n-title
+            i18n-title="@@COMMON__RATING"
           >
             <i
               class="material-icons m-posterActionBar__Icon"
