--- a/src/app/modules/nodes/marketing/marketing.component.html
+++ b/src/app/modules/nodes/marketing/marketing.component.html
@@ -1,6 +1,10 @@
 <div class="mf-jumpAnchor" #topAnchor></div>
 
-<m-marketing class="m-nodes__marketing" pageTitle="Nodes" i18n-pageTitle>
+<m-marketing
+  class="m-nodes__marketing"
+  pageTitle="Nodes"
+  i18n-pageTitle="@@MARKETING_NODES__NODES_TITLE"
+>
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
       <div class="m-grid__column-7 m-grid__column-12--mobile m-marketing__body">
@@ -195,7 +199,10 @@
             For your community
           </h3>
 
-          <p class="@@m-marketing__description" i18n="">
+          <p
+            class="@@m-marketing__description"
+            i18n="@@MARKETING_NODES__STOP_OUTSOURCING_SOCIAL_MEDIA"
+          >
             Stop outsourcing your social media presence and losing all of your
             reach. Regain direct access to your audience.
           </p>
