--- a/src/app/modules/onboarding-v2/steps/info/info.component.html
+++ b/src/app/modules/onboarding-v2/steps/info/info.component.html
@@ -80,7 +80,7 @@
     <div
       class="m-onboarding__error"
       [style.visibility]="!!ageError ? 'visible' : 'hidden'"
-      i18n
+      i18n="@@ONBOARDING_INFO__YOU_MUST_BE_ATLEAST_13"
     >
       You must be at least 13 years old
     </div>
