--- a/src/app/modules/onboarding-v2/steps/notice/notice.component.html
+++ b/src/app/modules/onboarding-v2/steps/notice/notice.component.html
@@ -7,7 +7,7 @@
 <h1
   class="m-onboarding__noticeTitle m-onboarding__mobileTitle"
   *ngIf="isMobile()"
-  i18n
+  i18n="@@ONBOARDING_NOTICE__WELCOME"
 >
   Welcome
 </h1>
