--- a/src/app/modules/pro/channel/footer/footer.component.html
+++ b/src/app/modules/pro/channel/footer/footer.component.html
@@ -4,7 +4,7 @@
       *ngIf="showMessageButton()"
       (click)="onMessageClicked()"
       class="m-proChannelFooter__link"
-      i18n-title
+      i18n-title="@@COMMON__MESSAGE"
     >
       Message
     </a>
