--- a/src/app/modules/pro/channel/hamburger-menu/hamburger-menu.component.html
+++ b/src/app/modules/pro/channel/hamburger-menu/hamburger-menu.component.html
@@ -38,7 +38,7 @@
         [routerLink]="feedRouterLink"
         routerLinkActive="m-proHamburgerMenu__item--active"
         (click)="closeMenu()"
-        i18n
+        i18n="@@COMMON__FEED"
         >Feed</a
       >
     </li>
@@ -48,7 +48,7 @@
         [routerLink]="videosRouterLink"
         routerLinkActive="m-proHamburgerMenu__item--active"
         (click)="closeMenu()"
-        i18n
+        i18n="@@COMMON__VIDEOS"
         >Videos</a
       >
     </li>
@@ -58,7 +58,7 @@
         [routerLink]="imagesRouterLink"
         routerLinkActive="m-proHamburgerMenu__item--active"
         (click)="closeMenu()"
-        i18n
+        i18n="@@COMMON__IMAGES"
         >Images</a
       >
     </li>
@@ -68,7 +68,7 @@
         [routerLink]="articlesRouterLink"
         routerLinkActive="m-proHamburgerMenu__item--active"
         (click)="closeMenu()"
-        i18n
+        i18n="@@COMMON__ARTICLES"
         >Articles</a
       >
     </li>
@@ -78,7 +78,7 @@
         [routerLink]="groupsRouterLink"
         routerLinkActive="m-proHamburgerMenu__item--active"
         (click)="closeMenu()"
-        i18n
+        i18n="@@COMMON__GROUPS"
         >Groups</a
       >
     </li>
