--- a/src/app/modules/pro/marketing.component.html
+++ b/src/app/modules/pro/marketing.component.html
@@ -1,6 +1,10 @@
 <div class="mf-jumpAnchor" #topAnchor></div>
 
-<m-marketing class="m-pro__marketing" pageTitle="Minds Pro" i18n-pageTitle>
+<m-marketing
+  class="m-pro__marketing"
+  pageTitle="Minds Pro"
+  i18n-pageTitle="@@COMMON__MINDS_PRO"
+>
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
       <div
