--- a/src/app/modules/pro/subscription/subscription.component.html
+++ b/src/app/modules/pro/subscription/subscription.component.html
@@ -10,7 +10,7 @@
             rightValue="monthly"
           ></m-toggle
         ></span>
-        <span i18n="@@PRO_SUBSCRIPTION__">Monthly</span>
+        <span i18n="@@PRO_SUBSCRIPTION__MONTHLY">Monthly</span>
       </div>
 
       <div class="m-proSubscriptionPlan__toggle">
