--- a/src/app/modules/settings-v2/pro/assets/assets.component.html
+++ b/src/app/modules/settings-v2/pro/assets/assets.component.html
@@ -11,7 +11,7 @@
         <label for="logo" i18n="@@COMMON__LOGO">Logo</label>
         <m-tooltip
           ><span m-tooltip--anchor>𝒊</span
-          ><ng-container i18n
+          ><ng-container i18n="@@SETTINGS__PRO__ASSETS__LOGO_TOOLTIP"
             >This will be displayed on the top left of your site</ng-container
           ></m-tooltip
         >
@@ -55,7 +55,7 @@
         >
         <m-tooltip
           ><span m-tooltip--anchor>𝒊</span
-          ><ng-container i18n
+          ><ng-container i18n="@@SETTINGS__PRO__ASSETS__BACKGROUND_TOOLTIP"
             >This will be displayed as the background of your site</ng-container
           ></m-tooltip
         >
