--- a/src/app/modules/settings-v2/pro/cancel/cancel.component.html
+++ b/src/app/modules/settings-v2/pro/cancel/cancel.component.html
@@ -11,7 +11,7 @@
       [saving]="inProgress"
       color="red"
       (click)="cancelSubscription()"
-      i18n
+      i18n="@@SETTINGS__PRO__CANCEL__CANCEL_SUBSCRIPTION"
     >
       Cancel Subscription
     </m-shadowboxSubmitButton>
