--- a/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
+++ b/src/app/modules/settings-v2/pro/hashtags/hashtags.component.html
@@ -19,7 +19,7 @@
           type="button"
           (click)="addBlankTag()"
           data-minds="addHashtag"
-          i18n
+          i18n="@@COMMON__ADD"
         >
           Add
         </button>
