--- a/src/app/modules/upgrades/upgrades.component.html
+++ b/src/app/modules/upgrades/upgrades.component.html
@@ -1,7 +1,7 @@
 <m-marketing
   class="m-upgrades"
   pageTitle="Upgrade your Minds experience"
-  i18n-pageTitle
+  i18n-pageTitle="@@UPGRADES__UPGRADE_MINDS_EXPERIENCE"
 >
   <div class="m-marketing__main m-marketing__section--style-1">
     <div class="m-grid m-marketing__wrapper">
