--- a/src/app/modules/wallet/v2/cash/settings/cash-onboarding-extras/cash-onboarding-extras.component.html
+++ b/src/app/modules/wallet/v2/cash/settings/cash-onboarding-extras/cash-onboarding-extras.component.html
@@ -122,7 +122,9 @@
   >
     <div class="m-walletForm__field--text stretchedField">
       <div class="m-walletForm__row--label">
-        <label for="personalIdNumber" i18n
+        <label
+          for="personalIdNumber"
+          i18n="@@CASH_ONBOARDING__EXTRAS__PERSONAL_ID_TEXT"
           >Personal ID / Social Security Number (SSN) / National Insurance
           Number</label
         >
