--- a/src/app/modules/wallet/v2/components/phone-verification/phone-verification.component.html
+++ b/src/app/modules/wallet/v2/components/phone-verification/phone-verification.component.html
@@ -19,7 +19,7 @@
           >Mobile Phone Number</label
         >
         <m-tooltip icon="help">
-          <ng-container i18n
+          <ng-container i18n="@@PHONE_VERIFICATION__MINDS_WILL_NOT_STORE_TEXT"
             >Minds will not store the number you provide. It will be hashed
             using SHA-256 and combined with a salt key for privacy and unique
             identification purposes. VOIP numbers are not allowed.</ng-container
