--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -8,98 +8,98 @@
         routerLink="/admin/interactions"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__INTERACTIONS">Interactions</span>
+        <span>Interactions</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/boosts"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__BOOSTS">Boosts</span>
+        <span>Boosts</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/firehose"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__FIREHOSE">Firehose</span>
+        <span>Firehose</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/pages"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__PAGES">Pages</span>
+        <span>Pages</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/moderation/juryduty/initial"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__APPEALS">Appeals</span>
+        <span>Appeals</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/monetization"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__MONETIZATION">Monetization</span>
+        <span>Monetization</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/programs"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__PROGRAMS">Programs</span>
+        <span>Programs</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/payouts"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__PAYOUTS">Payouts</span>
+        <span>Payouts</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/withdrawals"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__WITHDRAWALS">Withdrawals</span>
+        <span>Withdrawals</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/tagcloud"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__TAGCLOUD">Tag Cloud</span>
+        <span>Tag Cloud</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/verify"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__VERIFY">Verify</span>
+        <span>Verify</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/purchases"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__PURCHASES">Purchases</span>
+        <span>Purchases</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/reports-download"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__REPORTS">Reports</span>
+        <span>Reports</span>
       </a>
       <a
         class="m-topbar--navigation--item"
         routerLink="/admin/features"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__ADMIN_NAV__FEATURES">Features</span>
+        <span>Features</span>
       </a>
     </div>
   </div>
