--- a/src/app/modules/admin/boosts/boosts.html
+++ b/src/app/modules/admin/boosts/boosts.html
@@ -3,14 +3,12 @@
     [routerLink]="['/admin/boosts/newsfeed']"
     class="mdl-tabs__tab"
     [ngClass]="{'is-active': type == 'newsfeed'}"
-    i18n="@@MINDS__ADMIN__BOOSTS__NEWSFEED_TAB"
     >Newsfeed ({{newsfeed_count}})</a
   >
   <a
     [routerLink]="['/admin/boosts/content']"
     class="mdl-tabs__tab"
     [ngClass]="{'is-active': type == 'content'}"
-    i18n="@@MINDS__ADMIN__BOOSTS__CONTENT_TAB"
     >Content ({{content_count}})</a
   >
 </div>
@@ -20,41 +18,38 @@
   *ngIf="statistics"
 >
   <div class="mdl-cell mdl-cell--4-col m-admin-boost-stat">
-    <h3 i18n="@@MINDS__ADMIN__BOOSTS__IN_REVIEW_STATS">In Review</h3>
+    <h3>In Review</h3>
     <span class="m-value">{{ statistics.reviewQueue | number }}</span>
   </div>
   <div class="mdl-cell mdl-cell--4-col m-admin-boost-stat">
-    <h3 i18n="@@MINDS__ADMIN__BOOSTS__BACKLOG_STATS">Backlog (all)</h3>
+    <h3>Backlog (all)</h3>
     <span class="m-value">{{ statistics.backlog | number }}</span>
   </div>
   <div class="mdl-cell mdl-cell--4-col m-admin-boost-stat">
-    <h3 i18n="@@MINDS__ADMIN__BOOSTS__BACKLOG_PRIORITY_STATS">
+    <h3>
       Backlog (priority)
     </h3>
     <span class="m-value">{{ statistics.priorityBacklog | number }}</span>
   </div>
   <div class="mdl-cell mdl-cell--4-col m-admin-boost-stat">
-    <h3 i18n="@@MINDS__ADMIN__BOOSTS__IMPRESSIONS_STATS">
+    <h3>
       Impressions (backlog)
     </h3>
     <span class="m-value">{{ statistics.impressions | number }}</span>
   </div>
   <div class="mdl-cell mdl-cell--4-col m-admin-boost-stat">
-    <h3 i18n="@@MINDS__ADMIN__BOOSTS__AVG_IMPRESSIONS_STATS">
+    <h3>
       Avg. Impressions (backlog)
     </h3>
     <span class="m-value">{{ statistics.avgImpressions | number }}</span>
   </div>
   <div class="mdl-cell mdl-cell--4-col m-admin-boost-stat">
-    <h3 i18n="@@MINDS__ADMIN__BOOSTS__AVG_APPROVAL_TIME_STATS">
+    <h3>
       Avg. Approval Time
     </h3>
     <span class="m-value">{{ _duration(statistics.avgApprovalTime) }}</span>
   </div>
-  <div
-    class="mdl-cell mdl-cell--12-col m-admin-boost-stat-note"
-    i18n="@@MINDS__ADMIN__BOOSTS__LAST_UPDATED_STATS"
-  >
+  <div class="mdl-cell mdl-cell--12-col m-admin-boost-stat-note">
     Updated {{ statistics.timestamp * 1000 | date:'medium' }}
   </div>
 </div>
@@ -68,9 +63,7 @@
     ></div>
 
     <div class="mdl-card__supporting-text" [hidden]="inProgress || moreData">
-      <ng-container i18n="@@MINDS__ADMIN__BOOSTS__NO_MORE_BOOSTS"
-        >There are no more boosts to approve</ng-container
-      >
+      <ng-container>There are no more boosts to approve</ng-container>
     </div>
 
     <div
@@ -114,9 +107,7 @@
         class="mdl-card__supporting-text quality-slider"
         *ngIf="boost.state == 'created'"
       >
-        <ng-container i18n="@@MINDS__ADMIN__BOOSTS__QUALITY_SLIDER_LABEL"
-          >Quality:
-        </ng-container>
+        <ng-container>Quality: </ng-container>
         <div class="m--inputs">
           <input
             type="range"
@@ -142,7 +133,7 @@
         *ngIf="boost.entity.boost_rejection_reason && boost.entity.boost_rejection_reason != -1"
       >
         <i class="material-icons">warning</i>
-        <ng-container i18n="@@MINDS__ADMIN__BOOSTS__PREVIOUSLY_REJECTED_LABEL"
+        <ng-container
           >Previously rejected: {{
           findReason(boost.entity.boost_rejection_reason)?.label
           }}</ng-container
@@ -150,23 +141,17 @@
       </div>
 
       <span class="mdl-card__supporting-text impressions">
-        <span *ngIf="boost.impressions" i18n="@@M__COMMON__VIEWS_WITH_COUNT"
+        <span *ngIf="boost.impressions"
           >{{ boost.impressions | number }} views</span
         >
         |
-        <span
-          *ngIf="boost.bid_type == 'points'"
-          i18n="@@MINDS__ADMIN__BOOSTS__BOOST_BID_POINTS_LABEL"
+        <span *ngIf="boost.bid_type == 'points'"
           >Bid: {{ boost.bid | number }} points</span
         >
-        <span
-          *ngIf="boost.bid_type == 'usd'"
-          i18n="@@MINDS__ADMIN__BOOSTS__BOOST_BID_USD_LABEL"
+        <span *ngIf="boost.bid_type == 'usd'"
           >Bid: {{ boost.bid / 100 | currency:'USD':true }} USD
         </span>
-        <span
-          *ngIf="boost.bid_type == 'tokens'"
-          i18n="@@MINDS__ADMIN__BOOSTS__BOOST_BID_TOKENS_LABEL"
+        <span *ngIf="boost.bid_type == 'tokens'"
           >Bid: {{ boost.bid | token: 18 | number:'1.0-4' }} Tokens</span
         >
         |
@@ -176,7 +161,6 @@
       <div
         class="mdl-card__supporting-text action-buttons"
         *ngIf="boost.state != 'created'"
-        i18n="@@MINDS__ADMIN__BOOSTS__NOT_REVIEW_STATE"
       >
         This boost is in {{ boost.state }} state.
       </div>
@@ -199,35 +183,30 @@
         <button
           class="mdl-button mdl-button--raised mdl-button--colored m-admin-boosts--accept-button m-admin-button--green"
           (click)="accept(boost, false)"
-          i18n="@@M__ACTION__ACCEPT"
         >
           Accept
         </button>
         <button
           class="mdl-button mdl-button--raised mdl-button--colored m-admin-boosts--open-button m-admin-button--green-dark"
           (click)="accept(boost, true)"
-          i18n="safe boost|Open as a safe boost@@MINDS__ADMIN__BOOSTS__BOOST_ACTION_OPEN"
         >
           Open
         </button>
         <button
           class="mdl-button mdl-button--raised mdl-button--colored m-admin-boosts--e-tag-button-accept m-admin-button--green-dark"
           (click)="accept(boost, true, { mature: 1 })"
-          i18n="Open as an explicit boost@@MINDS__ADMIN__BOOSTS__BOOST_ACTION_OPEN_EXPLICIT"
         >
           Open (E-tag)
         </button>
         <button
           class="mdl-button mdl-button--raised mdl-button--colored m-admin-boosts--reject-button m-admin-button--red"
           (click)="openReasonsModal(boost)"
-          i18n="@@M__ACTION__REJECT"
         >
           Reject
         </button>
         <button
           class="mdl-button mdl-button--raised mdl-button--colored m-admin-boosts--e-tag-button m-admin-button--red"
           (click)="eTag(boost)"
-          i18n="E-tag as mark as explicit@@MINDS__ADMIN__BOOSTS__BOOST_ACTION_EXPLICIT"
         >
           E-tag
         </button>
@@ -243,7 +222,5 @@
   (closed)="reasonModalOpened = false"
   (actioned)="reject($event)"
   yesButton="Reject Boost"
-  i18n-yesButton="@@MINDS__ADMIN__BOOSTS__BOOST_MODAL__YES_BUTTON"
   noButton="Cancel"
-  i18n-noButton="@@M__ACTION__CANCEL"
 ></m--rejection-reason-modal>
