--- a/src/app/modules/boost/marketing.component.html
+++ b/src/app/modules/boost/marketing.component.html
@@ -1,6 +1,10 @@
 <div class="mf-jumpAnchor" #topAnchor></div>
 
-<m-marketing class="m-boost__marketing" pageTitle="Boost" i18n-pageTitle>
+<m-marketing
+  class="m-boost__marketing"
+  pageTitle="Boost"
+  i18n-pageTitle="@@COMMON__BOOST"
+>
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
       <div class="m-grid__column-7 m-grid__column-12--mobile m-marketing__body">
