--- a/src/app/modules/channels/v2/actions/menu.component.html
+++ b/src/app/modules/channels/v2/actions/menu.component.html
@@ -105,20 +105,20 @@
       (click)="unblock()"
     >
       <span class="m-dropdownMenu__item">
-        <span i18n="MINDS_BUTTON__USER_DROPDOWN__UNBLOCK">Unblock</span>
+        <span i18n="@@MINDS_BUTTON__USER_DROPDOWN__UNBLOCK">Unblock</span>
       </span>
     </li>
     <ng-template #blockOption>
       <li (click)="block()">
         <span class="m-dropdownMenu__item">
-          <span i18n="MINDS_BUTTON__USER_DROPDOWN__BLOCK">Block</span>
+          <span i18n="@@MINDS_BUTTON__USER_DROPDOWN__BLOCK">Block</span>
         </span>
       </li>
     </ng-template>
 
     <li (click)="report()">
       <span class="m-dropdownMenu__item">
-        <span i18n="MINDS_BUTTON__USER_DROPDOWN__REPORT">Report</span>
+        <span i18n="@@MINDS_BUTTON__USER_DROPDOWN__REPORT">Report</span>
       </span>
     </li>
   </ul>
