--- a/src/app/modules/channels/v2/edit/hashtags.component.html
+++ b/src/app/modules/channels/v2/edit/hashtags.component.html
@@ -13,7 +13,7 @@
       class="m-fieldButton-v2"
       [disabled]="(service.hashtags$ | async)?.length >= 5"
       (click)="hashtagsTypeaheadInput.triggerAction()"
-      i18n
+      i18n="@@COMMON__ADD"
     >
       Add
     </button>
