--- a/src/app/modules/channels/v2/edit/social-links.component.html
+++ b/src/app/modules/channels/v2/edit/social-links.component.html
@@ -5,7 +5,7 @@
       class="form-control"
       name="social-link-url"
       placeholder="Enter URL"
-      i18n-placeholder
+      i18n-placeholder="@@COMMON__SOCIAL_LINKS__ENTER_URL"
       [(ngModel)]="url"
       (keydown.enter)="addSocialLink()"
       #socialLinkUrlInput
@@ -15,7 +15,7 @@
       class="m-fieldButton-v2"
       [disabled]="!socialLinkUrlInput.value"
       (click)="addSocialLink()"
-      i18n
+      i18n="@@COMMON__ADD"
     >
       Add
     </button>
