--- a/src/app/modules/composer/components/text-area/text-area.component.html
+++ b/src/app/modules/composer/components/text-area/text-area.component.html
@@ -3,7 +3,7 @@
     <input
       type="text"
       placeholder="Title"
-      i18n-placeholder
+      i18n-placeholder="@@COMMON__TITLE"
       [ngModel]="(title$ | async) || ''"
       [hidden]="(title$ | async) === null"
       [disabled]="isPosting$ | async"
@@ -33,7 +33,7 @@
   <textarea
     class="m-composerTextarea__message"
     placeholder="Speak your mind..."
-    i18n-placeholder
+    i18n-placeholder="@@COMPOSER_POPUP__SPEAK_YOUR_MINDS_ELLIPSIS"
     [id]="inputId"
     [ngModel]="message$ | async"
     [disabled]="isPosting$ | async"
