--- a/src/app/modules/plus/marketing.component.html
+++ b/src/app/modules/plus/marketing.component.html
@@ -1,6 +1,10 @@
 <div class="mf-jumpAnchor" #topAnchor></div>
 
-<m-marketing class="m-plus__marketing" pageTitle="Minds Plus" i18n-pageTitle>
+<m-marketing
+  class="m-plus__marketing"
+  pageTitle="Minds Plus"
+  i18n-pageTitle="@@COMMON__MINDS_PLUS"
+>
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
       <div class="m-grid__column-7 m-grid__column-12--mobile m-marketing__body">
@@ -39,7 +43,9 @@
           >
 
           <ng-container *ngIf="!isVerified; else alreadyVerifiedView">
-            <a (click)="openVerifyModal()" i18n
+            <a
+              (click)="openVerifyModal()"
+              i18n="@@MARKETING_PLUS__CLICK_TO_REQUEST_VERIFICATION"
               >Click here to request to be verified</a
             >
           </ng-container>
